--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Sixtyfour"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="utf-8" />
 
+    <style>
+
+       h1 {
+      font-family: "Sixtyfour", sans-serif;
+      color: #C4D63E
+     
+       }
+    </style>
   </head>
   <body>
-    <main>
-    </main>
+    <h1> ❤︎ AGRINHO 2025 ❤︎ </h1>
+    <main></main>
     <script src="sketch.js"></script>
   </body>
 </html>
